--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+body {
+  background: linear-gradient(to bottom, #954040, #ffd3d3);
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
 .App {
-  text-align: center;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.list {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  overflow-x: auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #ffbaba;
+  min-height: 25vh;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.item {
+  width: 20vw;
+  height: 20vw;
+  box-shadow: 2px 13px 24px #000000;
+  transition: transform 500ms;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-enter {
+  transform: translateX(-100%);
+}
+
+.item-enter-active {
+  transform: translateX(0);
+}
+
+.item-exit {
+  transform: translateX(0);
+}
+
+.item-exit-active {
+  transform: translateX(100%);
+}
+
+.button {
+  padding: 20px;
+  border-radius: 10px;
+  border: 0;
+  cursor: pointer;
+  background: #6777e1;
+  color: #fff;
+  text-transform: uppercase;
+  transition: 0.3s all;
+}
+
+.button:hover {
+  background: #2b44ea;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 500px;
+  width: 90%;
 }
